basic readability fixes

--- a/strona-o-mnie/css/style.scss
+++ b/strona-o-mnie/css/style.scss
@@ -56,6 +56,7 @@ h2,
 h3 {
   font-family: Montserrat, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
+  line-height: 1.6em;
 }
 
 h2 {
@@ -67,7 +68,7 @@ h3 {
 }
 
 p {
-  font-size: 2.4rem;
+  font-size: 1.9rem;
 }
 
 ::selection {
@@ -98,7 +99,7 @@ footer {
 nav,
 footer {
   color: white;
-  padding: 20px 50px;
+  padding: 0 50px;
 }
 
 nav {
@@ -199,6 +200,10 @@ nav {
   background-color: rgba(255, 255, 255, 0.4);
   padding: 30px;
   transform: translateY(-50%);
+
+  h1 {
+   color: $kj-blue;
+  }
 }
 
 .container {
